--- a/caffe-easy/windows-gpu/libcaffe/windows-gpu.vcxproj.filters
+++ b/caffe-easy/windows-gpu/libcaffe/windows-gpu.vcxproj.filters
@@ -174,9 +174,6 @@
     <ClInclude Include="..\..\include\caffe\layers\lrn_layer.hpp">
       <Filter>include\layers</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\include\caffe\layers\lstm_layer.hpp">
-      <Filter>include\layers</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\include\caffe\layers\memory_data_layer.hpp">
       <Filter>include\layers</Filter>
     </ClInclude>
@@ -384,6 +381,12 @@
     <ClInclude Include="..\..\support\train\lmdb\lmdb.h">
       <Filter>support\train</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\caffe\layers\lstm_common_layers.hpp">
+      <Filter>include\layers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\caffe\layers\lstm_LSTM_layer.hpp">
+      <Filter>include\layers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\caffe\layers\absval_layer.cpp">
@@ -522,12 +525,6 @@
       <Filter>src\layers</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\caffe\layers\lrn_layer.cpp">
-      <Filter>src\layers</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\caffe\layers\lstm_layer.cpp">
-      <Filter>src\layers</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\caffe\layers\lstm_unit_layer.cpp">
       <Filter>src\layers</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\caffe\layers\memory_data_layer.cpp">
@@ -725,6 +722,15 @@
     <ClCompile Include="..\..\src\caffe\layers\predict_box_layer.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\caffe\layers\lstm_layer.cpp">
+      <Filter>src\layers</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\caffe\layers\lstm_LSTM_layer.cpp">
+      <Filter>src\layers</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\caffe\layers\lstm_LSTM_unit_layer.cpp">
+      <Filter>src\layers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CudaCOmpile Include="..\..\src\caffe\layers\absval_layer.cu">
@@ -826,9 +832,6 @@
     <CudaCOmpile Include="..\..\src\caffe\layers\lrn_layer.cu">
       <Filter>src\layers</Filter>
     </CudaCOmpile>
-    <CudaCOmpile Include="..\..\src\caffe\layers\lstm_unit_layer.cu">
-      <Filter>src\layers</Filter>
-    </CudaCOmpile>
     <CudaCOmpile Include="..\..\src\caffe\layers\mvn_layer.cu">
       <Filter>src\layers</Filter>
     </CudaCOmpile>
@@ -925,5 +928,11 @@
     <CudaCOmpile Include="..\..\src\caffe\solvers\sgd_solver.cu">
       <Filter>src\solvers</Filter>
     </CudaCOmpile>
+    <CudaCompile Include="..\..\src\caffe\layers\lstm_layer.cu">
+      <Filter>src\layers</Filter>
+    </CudaCompile>
+    <CudaCompile Include="..\..\src\caffe\layers\lstm_LSTM_unit_layer.cu">
+      <Filter>src\layers</Filter>
+    </CudaCompile>
   </ItemGroup>
 </Project>
